Finished teachers page

--- a/maestros.html
+++ b/maestros.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/parents.css">
+    <link rel="stylesheet" href="css/teachers.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body>
@@ -40,7 +41,7 @@
       </div>
     </header>
     <iframe  type="text/html" allowfullscreen style="width:100%;height:100%;display:none" src="" frameborder="0"></iframe>
-    <div class="bannerImg"></div>
+    <div class="bannerImg teachers"></div>
     <div class="hidden" id="#tabSelect"></div>
     <div class="generalWrapper">
       <article>
@@ -52,92 +53,16 @@
     <div id="overlay_back"></div>
   </section>
   <section id="anarita">
-    <div class="generalWrapper">
-      <div id="blog">
-        <article>
-          <div>
-            <p class="pretitle"> Video Blog</p>
-            <p class="title">Ana Rita ¿Qué hago para manejar las pataletas de mi hijo?</p>
-            <p> Las pataletas son parte del desarrollo de los niñas y niñas, ante ellas, muchas veces los padres no saben como actuar, qué hacer, como manejarlas o reducirlas</p>
-            <a href="blog.php?f=1" class="btn">Ir a video Blog</a>
-          </div>
-          <div id="videoBlog">
-            <iframe  type="text/html" allowfullscreen src="" frameborder="0"></iframe>
-          </div>
-          <!--<video id="videoBlog" controls src="video/ninos/Teaser_ENSUB_Las-aventuras-de-Ugo-y-Ema.mov" poster="img/padres/blog_poster.png">
-            Your browser does not support the video tag.
-          </video>-->
-        </article>
-      </div>
-      <div id="articles">
-        <article>
-          <p class="articleTitle">Artículos expertos temas de crianza</p>
-          <p class="articleText"> Si quieres informarte y aprender más sobre la crianza de tus hijos e hijas, haz click aquí.</p>
-        </article>
-        <div class="opt_content_slider_wrapper">
-          <div class="opt_content active">
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-          </div>
+    <div class="information-resources pt-3">
+        <div class="articles-links py-2 py-lg-3 px-1 px-md-3">
+            <a class="mb-3 mr-md-5 text-lg-right" href="/articles.php"><img src="img/pisoton/elementos-42.png" alt="Más allá de las técnicas"></a>
+            <a class="mb-5 text-lg-left" href="/articles.php"><img src="img/padres/elementos-40.png" alt="Razones y corazones"></a>
         </div>
-        <div id="wrapperSelectorArticle">
-          <span class="active" id="opt1">1</span>
-          <span id="opt2">2</span>
-          <span id="opt3">3</span>
-        </div>
-      </div>
-      <div id="downloader">
-        <div class="arrowLeft"><img src="img/pisoton/friends/ICONO_IZQ.png"/></div>
-        <div class="arrowRight"><img src="img/pisoton/friends/ICONO_DER.png"/></div>
-        <div id="downloaderSlider" class="pisoton_slider">
-          <div class="sliderContent">
-
-          </div>
-        </div>
-      </div>
     </div>
     <div class="sectionHeader lastSection">
-      <h3>¿Tienes alguna pregunta o inquietud? Escríbenos</h3>
+      <h3>¿Tienes alguna inquietud sobre el programa?</h3>
+      <br>
+      <h3>¿Eres un gestor de historias trascendentes? Cuentanos tu historia </h3>
     </div>
   </section>
   <section id="store" class="masters">
@@ -153,47 +78,6 @@
     <div id="footerGrass"></div>
   </section>
   <section id="moreInfo">
-    <!--<div class="wrapper">
-      <div>
-        <h4><a href="index.html">Niños</a></h4>
-      </div>
-      <div>
-        <h4><a href="padres.php">Padres</a></h4>
-        <ul>
-          <li><a href="padres.php#blog">Video Blog</a></li>
-          <li><a href="padres.php#articles">Artículos</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4><a href="maestros.html">Maestros</a></h4>
-        <ul>
-          <li><a href="maestros.html#blog">Video Blog</a></li>
-          <li><a href="maestros.html#articles">Artículos</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4><a href="pisoton.html">Pisotón</a></h4>
-        <ul>
-          <li><a href="pisoton.html#articles">Artículos</a></li>
-          <li><a href="pisoton.html#cronology">Cronología</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4>Newsletter</h4>
-        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
-        <span>
-          <input type ="text" placeholder="Email"></input>
-          <img src="img/ninos/telegram.jpg"/>
-        </span>
-        <div id="networks">
-          <img src="img/ninos/facebook_icon.png" alt="facebook">
-          <img src="img/ninos/twitter_icon.png" alt="twitter">
-          <img src="img/ninos/feeds_icon.png" alt="feeds">
-          <img src="img/ninos/instagram_icon.png" alt="instagram">
-          <img src="img/ninos/google_icon.png" alt="google">
-        </div>
-      </div>
-    </div>-->
   </section>
   <div class="modal fade bs-example-modal-sm" tabindex="-1" id="prueba" role="dialog" aria-labelledby="mySmallModalLabel">
       <div class="modal-dialog modal-sm" role="document">
