--- a/maestros.html
+++ b/maestros.html
@@ -55,8 +55,8 @@
   <section id="anarita">
     <div class="information-resources pt-3">
         <div class="articles-links py-2 py-lg-3 px-1 px-md-3">
-            <a class="mb-3 mr-md-5 text-lg-right" href="/articles.php"><img src="img/pisoton/elementos-42.png" alt="Más allá de las técnicas"></a>
-            <a class="mb-5 text-lg-left" href="/articles.php"><img src="img/padres/elementos-40.png" alt="Razones y corazones"></a>
+            <a class="mb-3 mr-md-5 text-lg-right" href="articles.php"><img src="img/pisoton/elementos-42.png" alt="Más allá de las técnicas"></a>
+            <a class="mb-5 text-lg-left" href="articles.php"><img src="img/padres/elementos-40.png" alt="Razones y corazones"></a>
         </div>
     </div>
     <div class="sectionHeader lastSection">
