--- a/pisoton.html
+++ b/pisoton.html
@@ -67,7 +67,7 @@
       </div>
       <div class="articles-links d-flex py-2 py-md-5">
           <a class="mb-3 mr-2 mr-lg-5" href="articles.php"><img src="img/pisoton/elementos-10.png" alt="Nos emociona educar"></a>
-          <a class="mb-3" href="/articles.php"><img src="img/pisoton/elementos-11.png" alt="Razones y corazones"></a>
+          <a class="mb-3" href="articles.php"><img src="img/pisoton/elementos-11.png" alt="Razones y corazones"></a>
       </div>
   </section>
 
