--- a/maestros.html
+++ b/maestros.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/parents.css">
     <link rel="stylesheet" href="css/teachers.css">
+    <link rel="stylesheet" href="css/pisoton.css">
+    <link rel="stylesheet" href="css/buttons.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body>
@@ -59,10 +61,19 @@
             <a class="mb-5 text-lg-left" href="articles.php"><img src="img/padres/elementos-40.png" alt="Razones y corazones"></a>
         </div>
     </div>
+    <section class="transcendental-stories py-4 py-md-0 pt-md-5 pb-md-5">
+      <h2>Gestadores de historias trascendentes</h2>
+      <div class="stories">
+        <div class="feature-story pr-lg-3">
+        </div>
+        <div class="old-stories d-flex flex-column">
+        </div>
+      </div>
+    </section>
     <div class="sectionHeader lastSection">
       <h3>¿Tienes alguna inquietud sobre el programa?</h3>
       <br>
-      <h3>¿Eres un gestor de historias trascendentes? Cuentanos tu historia </h3>
+      <h3>¿Eres un gestador de historias trascendentes? Cuéntanos tu historia </h3>
     </div>
   </section>
   <section id="store" class="masters">
@@ -106,7 +117,7 @@
           <input id="newsFormEmail" type ="text" placeholder="Email"></input>
           <img id="newsFormRegister" src="img/ninos/telegram.png"/>
         </span>
-        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+        <p>Suscríbete para recibir más información</p>
       </div>
       <a href="pisoton.html"><img id="logoPisoton" src="img/ninos/home-07.png" alt="pisoton"/></a>
     </div>
@@ -131,6 +142,7 @@
   <script src="js/mobileSelect.js"></script>
   <script src="js/handler.js"></script>
   <script src="js/formhandler.js"></script>
+  <script src="js/pisotonPage.js"></script>
     <!--<script src="js/libs/jqueryValidate/jqueryvalidate.js"></script>-->
     <!--<script src="js/formhandler.js"></script>-->
 </body>
