--- a/nos_emociona_transformar.html
+++ b/nos_emociona_transformar.html
@@ -57,8 +57,8 @@
       </div>
     </div>
     <article class="emotion-row leftAlign my-5">
+      <p class="quote1 mr-lg-5 pr-md-5">Trabajamos por, con y para la infancia</p>
       <p class="desc">Estamos comprometidos con la construcción del ser, trabajamos por la infancia y la adolescencia, facilitando el conocimiento del desarrollo psicoafectivo, la aceptación y la regulación de las emociones en niños, padres y maestros, para contribuir a la armonía, el bienestar y la transformación social.</p>
-      <p class="quote1">Trabajamos por, con y para la infancia</p>
     </article>
     <!--<video id="videoBlog" controls src="video/ninos/Teaser_ENSUB_Las-aventuras-de-Ugo-y-Ema.mov" poster="img/padres/blog_poster.png">
       Your browser does not support the video tag.
@@ -282,7 +282,7 @@
       </div>
       <div>
         <h4>Newsletter</h4>
-        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+        <p>Suscríbete para recibir más información</p>
         <span>
           <input type ="text" placeholder="Email"></input>
           <img src="img/ninos/telegram.jpg"/>
@@ -311,7 +311,7 @@
           <input id="newsFormEmail" type ="text" placeholder="Email"></input>
           <img id="newsFormRegister" src="img/ninos/telegram.png"/>
         </span>
-        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+        <p>Suscríbete para recibir más información</p>
       </div>
       <a href="pisoton.html"><img id="logoPisoton" src="img/ninos/home-07.png" alt="pisoton"/></a>
     </div>
