--- a/pisoton.html
+++ b/pisoton.html
@@ -62,8 +62,8 @@
   </section>
   <section class="articles d-flex justify-content-center flex-wrap flex-md-nowrap align-items-center pt-5 px-3 px-lg-5 pb-3 m-0 text-center text-md-left">
       <div class="articles-explanation mr-2">
-        <p class="articleTitle mb-4">Artículos expertos temas de crianza</p>
-        <p class="articleText mb-4">Si quieres informarte y aprender más sobre la crianza de tus hijos e hijas, haz click aquí.</p>
+        <p class="articleTitle mb-4">Noticias, artículos e investigaciones </p>
+        <p class="articleText mb-4">Entérate de las últimas actividades e investigaciones del programa Pisotón.</p>
       </div>
       <div class="articles-links d-flex py-2 py-md-5">
           <a class="mb-3 mr-2 mr-lg-5" href="articles.php"><img src="img/pisoton/elementos-10.png" alt="Nos emociona educar"></a>
@@ -241,161 +241,7 @@
       </div>
     </div>
   </section>
-  <!--<section id="pisoton_blog">
-    <article>
-      <div>
-        <p class="pretitle"> Video Blog</p>
-        <p class="title">Pisotón dejando huellas Experiencas compartidas del equipo</p>
-        <a href="#" class="btn">Ir a video Blog</a>
-      </div>
-    </article>
-
-  </section>
-  <section id="teamAndFriends">
-    <div class="sectionHeader">
-      <h3>Formación en educacion emocional</h3>
-      <a href="#" class="btn">Ver más</a>
-    </div>
-    <div id="formation">
-      <article>
-        <p class="pretitle"> Formación</p>
-        <p class="title">Diplomado en Desarrollo psicoafectivo y educación emocional</p>
-        <p>xxxxxxx xxxxxxx xxxxxxx xxxxxxx xxxxxxx xxxxxxxxxxxxxx xxxxxxxxxxxxxx xxxxxxxxxxxxxx xxxxxxxxxxxxxx</p>
-      </article>
-      <img src="img/pisoton/imagen_ninos.png"/>
-    </div>
-    <div id="friendsWrapper">
-      <p>Los Amigos de siempre </br>(Aliados y amigos)<p>
-      <div class="arrowLeft"><img src="img/pisoton/friends/ICONO_IZQ.png"/></div>
-      <div class="arrowRight"><img src="img/pisoton/friends/ICONO_DER.png"/></div>
-      <div id="friends" class="pisoton_slider">
-        <div class="sliderContent">
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-          <img src="img/pisoton/friends/LOGO_ALIADOS_REF.png"/>
-        </div>
-      </div>
-    </div>
-    <div id="teamWrapper">
-      <p>Juntos sí se puede<p>
-      <div class="arrowLeft"><img src="img/pisoton/friends/ICONO_IZQ.png"/></div>
-      <div class="arrowRight"><img src="img/pisoton/friends/ICONO_DER.png"/></div>
-      <div id="team" class="pisoton_slider">
-        <div class="sliderContent">
-          <div class="card">
-            <div class="background_overlay"></div>
-            <article>
-              <p class="cardSubtitle">Dir Comunicaciones</p>
-              <p class="cardDescTitle"> Adelaida Guerrero</p>
-              <p class="cardDesc">xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx</p>
-            </article>
-          </div>
-          <div class="card">
-            <div class="background_overlay"></div>
-            <article>
-              <p class="cardSubtitle">Dir Comunicaciones</p>
-              <p class="cardDescTitle"> Adelaida Guerrero</p>
-              <p class="cardDesc">xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx</p>
-            </article>
-          </div>
-          <div class="card">
-            <div class="background_overlay"></div>
-            <article>
-              <p class="cardSubtitle">Dir Comunicaciones</p>
-              <p class="cardDescTitle"> Adelaida Guerrero</p>
-              <p class="cardDesc">xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx</p>
-            </article>
-          </div>
-          <div class="card">
-            <div class="background_overlay"></div>
-            <article>
-              <p class="cardSubtitle">Dir Comunicaciones</p>
-              <p class="cardDescTitle"> Adelaida Guerrero</p>
-              <p class="cardDesc">xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx</p>
-            </article>
-          </div>
-        </div>
-      <div>
-    </div>
-  </section>-->
-  <!--<section id="awards">
-    <article>
-      <h3>Reconocimientos</h3>
-      <div id="awardsWrapper">
-        <div>
-          <img src="img/pisoton/RECONOCIMIENTOS.svg"/>
-          <p class="title">Nuestros logros número uno.</p>
-          <p>xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxxxxxx xxxx xxxx xxxx xxxx xxxx.</p>
-        </div>
-        <div>
-          <img src="img/pisoton/RECONOCIMIENTOS.svg"/>
-          <p class="title">Nuestros logros número uno.</p>
-          <p>xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxxxxxx xxxx xxxx xxxx xxxx xxxx.</p>
-        </div>
-        <div>
-          <img src="img/pisoton/RECONOCIMIENTOS.svg"/>
-          <p class="title">Nuestros logros número uno.</p>
-          <p>xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxxxxxx xxxx xxxx xxxx xxxx xxxx.</p>
-        </div>
-      </div>
-    </article>
-  </section>-->
   <section id="moreInfo" >
-    <!--<div class="wrapper">
-      <div>
-        <h4><a href="index.html">Niños</a></h4>
-      </div>
-      <div>
-        <h4><a href="padres.php">Padres</a></h4>
-        <ul>
-          <li><a href="padres.php#blog">Video Blog</a></li>
-          <li><a href="padres.php#articles">Artículos</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4><a href="maestros.html">Maestros</a></h4>
-        <ul>
-          <li><a href="maestros.html#blog">Video Blog</a></li>
-          <li><a href="maestros.html#articles">Artículos</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4><a href="pisoton.html">Pisotón</a></h4>
-        <ul>
-          <li><a href="pisoton.html#articles">Artículos</a></li>
-          <li><a href="pisoton.html#cronology">Cronología</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4>Newsletter</h4>
-        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
-        <span>
-          <input type ="text" placeholder="Email"></input>
-          <img src="img/ninos/telegram.jpg"/>
-        </span>
-        <div id="networks">
-          <img src="img/ninos/facebook_icon.png" alt="facebook">
-          <img src="img/ninos/twitter_icon.png" alt="twitter">
-          <img src="img/ninos/feeds_icon.png" alt="feeds">
-          <img src="img/ninos/instagram_icon.png" alt="instagram">
-          <img src="img/ninos/google_icon.png" alt="google">
-        </div>
-      </div>
-    </div>-->
   </section>
   <footer>
     <div class="footerWrapper">
@@ -411,7 +257,7 @@
           <input id="newsFormEmail" type ="text" placeholder="Email"></input>
           <img id="newsFormRegister" src="img/ninos/telegram.png"/>
         </span>
-        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+        <p>Suscríbete para recibir más información</p>
       </div>
       <a href="pisoton.html"><img id="logoPisoton" src="img/ninos/home-07.png" alt="pisoton"/></a>
     </div>
