--- a/razones_y_corazones.html
+++ b/razones_y_corazones.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     <article class="emotion-row my-md-5">
-      <p class="desc mr-lg-5">"Jamás imaginamos que un personaje animal tomara alma o dejara huella en los niños y madres. Ellos expresaban que pisoton era amor, confianza, fé y esperanza; ese amigo con el cual platicar cuando se sientan tristes. Gracias Pisotón, por convertir estos sueños en luces esperanzadores." <br>  <strong> Benita Morales Barranco, Yucatán </strong> </p>
+      <p class="desc mr-lg-5 mb-5 mb-md-0 mr-lg-5 mr-md-5">"Jamás imaginamos que un personaje animal tomara alma o dejara huella en los niños y madres. Ellos expresaban que pisoton era amor, confianza, fé y esperanza; ese amigo con el cual platicar cuando se sientan tristes. Gracias Pisotón, por convertir estos sueños en luces esperanzadores." <br>  <strong> Benita Morales Barranco, Yucatán </strong> </p>
       <p class="quote1 mb-3">La única tarea de los niños es crecer fuertes, sanos, seguros de sí mismos, con felicidad, amor y estimulación adecuada.</p>
     </article>
     <div class="textAndImg">
@@ -135,7 +135,7 @@
       </div>
       <div>
         <h4>Newsletter</h4>
-        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+        <p>Suscríbete para recibir más información</p>
         <span>
           <input type ="text" placeholder="Email"></input>
           <img src="img/ninos/telegram.jpg"/>
@@ -164,7 +164,7 @@
           <input id="newsFormEmail" type ="text" placeholder="Email"></input>
           <img id="newsFormRegister" src="img/ninos/telegram.png"/>
         </span>
-        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+        <p>Suscríbete para recibir más información</p>
       </div>
       <a href="pisoton.html"><img id="logoPisoton" src="img/ninos/home-07.png" alt="pisoton"/></a>
     </div>
