--- a/maestros.html
+++ b/maestros.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/bootstrap-4-utilities.min.css">
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/parents.css">
     <link rel="stylesheet" href="css/teachers.css">
     <link rel="stylesheet" href="css/pisoton.css">
@@ -34,14 +35,20 @@
       <a href="index.php" >Niños</a>
       <a href="javascript:void(0);" class="icon" onclick="menuClickParent()">&#9776;</a>
     </div>
-    <header>
-      <div class="headerWrapper teachers">
-        <a href="#"><img src="img/padres/maestros.png"></a>
-        <a href="padres.php"><img src="img/padres/Padres-05.png"></a>
-        <a href="pisoton.html"><img src="img/padres/Padres-03.png"></a>
-        <a href="index.php" ><img src="img/padres/Padres-04.png"></a>
-      </div>
-    </header>
+    <navbar class="navbar-pisoton">
+      <a href="maestros.html" class="nav-link teachers-link">
+        <p> Maestros, agentes educativos y tutores </p>
+      </a>
+      <a href="pisoton.html" class="nav-link pisoton-link"> 
+        <p> Pisotón </p>
+      </a>
+      <a href="index.php" class="nav-link adventures-link">
+        <p> Las Aventuras de Ugo y Ema</p>
+      </a>
+      <a href="padres.php" class="nav-link parents-link">
+        <p> Papá, mamá y cuidadores </p>
+      </a>
+    </navbar>
     <iframe  type="text/html" allowfullscreen style="width:100%;height:100%;display:none" src="" frameborder="0"></iframe>
     <div class="bannerImg teachers"></div>
     <div class="hidden" id="#tabSelect"></div>
