--- a/pisoton.html
+++ b/pisoton.html
@@ -37,15 +37,27 @@
       <a href="pisoton.html" class="nav-link pisoton-link"> 
         <p> Pisotón </p>
       </a>
-      <a href="index.php" class="nav-link adventures-link">
-        <p> Las Aventuras de Ugo y Ema</p>
-      </a>
-      <a href="padres.php" class="nav-link parents-link">
-        <p> Papá, mamá y cuidadores </p>
-      </a>
-      <a href="maestros.html" class="nav-link teachers-link">
-        <p> Maestros, agentes educativos y tutores </p>
-      </a>
+      <div class="nav-sub-header">
+          <div class="nav-child-sub-header">
+              <a href="index.php" class="nav-link adventures-link">
+                <p> Las Aventuras de Ugo y Ema</p>
+              </a>
+              <a href="padres.php" class="nav-link parents-link">
+                <p> Papá, mamá y cuidadores </p>
+              </a>
+              <a href="maestros.html" class="nav-link teachers-link">
+                <p> Maestros, agentes educativos y tutores </p>
+              </a>
+          </div>
+          <div class="nav-child-sub-header special-reasons">
+              <a href="maestros.html" class="nav-link">
+                <p> Nos emociona transformar </p>
+              </a>
+              <a href="maestros.html" class="nav-link">
+                  <p> Maestros, agentes educativos y tutores </p>
+                </a>
+          </div>
+      </div>
     </navbar>
     <iframe  type="text/html" allowfullscreen style="width:100%;height:100%;display:none" src="" frameborder="0"></iframe>
     <div class="generalWrapper">
