--- a/estructura.html
+++ b/estructura.html
@@ -16,7 +16,10 @@
     <title></title>
     <meta name="viewport" content="width=device-width, user-scalable=no" >
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-4-utilities.min.css">
     <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body>
@@ -29,46 +32,27 @@
       <a href="index.php" >Niños</a>
       <a href="javascript:void(0);" class="icon" onclick="menuClickParent()">&#9776;</a>
     </div>
-    <!--<div class="subMenu">
-      <a id="refBanner" href="#" class="active">Inicio</a>
-      <a id="refBlog" href="#blog">Video Blog</a>
-      <a id="refContacts" href="#moreInfo">Contacto</a>
-    </div>-->
-    <!--<h1 id="logo">
-      <a href="#"></a>
-    </h1>
-    /*<div class="topnav" id="myTopnav">
-      <a href="#padres">Padres</a>
-      <a href="#maestros">Maestros</a>
-      <a href="#" class="active">Niños</a>
-      <a href="#blog">Video Blog</a>
-      <a href="#Contacto">Contacto</a>
-      <a href="javascript:void(0);" class="icon" onclick="menuClick()">&#9776;</a>
-    </div>-->
-  <!--</section>-->
-  <header class="relHeader">
-    <div class="headerWrapper pisotonB">
-      <a href="pisoton.html"><img src="img/pisoton/PisotonHome-01.png"></a>
-      <div class="subHeader">
-        <div class="subHeaderItem">
-          <a href="padres.php"><img src="img/padres/Padres-05.png"></a>
-          <a href="maestros.html"><img src="img/padres/Padres-02.png"></a>
-          <a href="index.php" ><img src="img/padres/Padres-04.png"></a>
-        </div>
-        <div class="subHeaderItem">
-          <a href="nos_emociona_transformar.html"><img src="img/pisoton/NosEmociona-09.png"></a>
-          <a href="razones_y_corazones.html"><img src="img/pisoton/NosEmociona-10.png"></a>
-        </div>
-      </div>
-    </div>
-  </header>
+    <navbar class="navbar-pisoton">
+      <a href="pisoton.html" class="nav-link pisoton-link"> 
+        <p> Pisotón </p>
+      </a>
+      <a href="index.php" class="nav-link adventures-link">
+        <p> Las Aventuras de Ugo y Ema</p>
+      </a>
+      <a href="padres.php" class="nav-link parents-link">
+        <p> Papá, mamá y cuidadores </p>
+      </a>
+      <a href="maestros.html" class="nav-link teachers-link">
+        <p> Maestros, agentes educativos y tutores </p>
+      </a>
+    </navbar>
   <section id="videos" class="intern">
     <!--<h4>Para qué lo hacemos</h4>-->
     <article class="internTopMsg">
       Estructura
     </article>
   </section>
-  <section id="info" class="intern maxWidth">
+  <section id="info" class="intern maxWidth mt-0">
     <div id='emotionHeader'>
       <div class="title">
         <img src='img/pisoton/NosEmociona-01.png'/>
